ImportUser Bug fix

--- a/ProjectManagement/Views/Project/Assign.cshtml
+++ b/ProjectManagement/Views/Project/Assign.cshtml
@@ -124,7 +124,7 @@
                 </div>
             </div>
         }
-        else
+        else if(!Convert.ToBoolean(ViewBag.isShadow))
         {
             <div class="card">
                 <div class="card-header">
