--- a/ProjectManagement/Views/Employee/Details.cshtml
+++ b/ProjectManagement/Views/Employee/Details.cshtml
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <div class="row">
+    @* <div class="row">
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
@@ -144,5 +144,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
 </div> 
