--- a/ProjectManagement/Views/Worklog/Project.cshtml
+++ b/ProjectManagement/Views/Worklog/Project.cshtml
@@ -13,6 +13,13 @@
         @Html.AntiForgeryToken()
     </div>
 }
+@if (TempData["UnauthorizedMessage"] != null)
+{
+    <div id="unauthorizedMessage"   style="background-color: #f8d7da; color: #721c24;padding: 10px 15px;margin-bottom: 15px;border-radius: 4px;border: 1px solid #f5c6cb;font-weight: 600;">
+        @TempData["UnauthorizedMessage"]
+    </div>
+}
+
 
 <div class="page-header d-flex justify-content-between align-items-center">
     <h1>@Model.ProjectName - Worklogs</h1>
@@ -238,6 +245,16 @@
             });
         });
 
+         setTimeout(() => {
+            const msg = document.getElementById('unauthorizedMessage');
+            if (msg) {
+                msg.style.opacity = '0'; 
+                
+                setTimeout(() => {
+                    msg.remove();
+                }, 500);
+            }
+        }, 1000);
 
         function loadWorklogs(page = 1) {
             currentPage = page;
