--- a/ProjectManagement/Views/Home/Index.cshtml
+++ b/ProjectManagement/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             }
-            else
+           @*  else
             {
                 <div class="col-md-3">
                     <div class="card bg-success text-white">
@@ -47,18 +47,18 @@
                         </div>
                     </div>
                 </div>
-            }
+            } *@
             
-            <div class="col-md-3">
+           @*  <div class="col-md-3">
                 <div class="card bg-info text-white">
                     <div class="card-body">
                         <h5 class="card-title">Worklogs</h5>
                         <h2 class="card-text">@Model.TotalWorklogs</h2>
                     </div>
                 </div>
-            </div>
+            </div> *@
             
-            <div class="col-md-3">
+            @* <div class="col-md-3">
                 <div class="card bg-warning text-dark">
                     <div class="card-body">
                         <h5 class="card-title">Quick Actions</h5>
@@ -69,7 +69,7 @@
                         }
                     </div>
                 </div>
-            </div>
+            </div> *@
         </div>
         
         <div class="row">
