- Fixed delete team member issue

--- a/ProjectManagement/Views/Home/Index.cshtml
+++ b/ProjectManagement/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             }
-           @*  else
+            else
             {
                 <div class="col-md-3">
                     <div class="card bg-success text-white">
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-            } *@
+            }
             
            @*  <div class="col-md-3">
                 <div class="card bg-info text-white">
