--- a/ProjectManagement/Views/Employee/Index.cshtml
+++ b/ProjectManagement/Views/Employee/Index.cshtml
@@ -7,10 +7,20 @@
 }
 
 <div class="container">
+       
+  
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1>@ViewData["Title"]</h1>
-        <a asp-controller="Account" asp-action="Register" class="btn btn-primary">Register New Employee</a>
+    <h1>@ViewData["Title"]</h1>
+    <div class="btn-group">
+        <a asp-controller="ImportUsers" asp-action="Index" class="btn btn-primary">
+            <i class="bi bi-person"></i> Add Employee Request
+        </a>
+        <a asp-controller="Account" asp-action="Register" class="btn btn-secondary">
+            <i class="bi bi-person-plus"></i> Register New Employee
+        </a>
     </div>
+</div>
+
 
     <div class="card">
         <div class="card-body">
