--- a/ProjectManagement/Views/Worklog/Create.cshtml
+++ b/ProjectManagement/Views/Worklog/Create.cshtml
@@ -32,7 +32,7 @@
                         
                         <div class="form-group mb-3">
                             <label asp-for="HoursWorked" class="form-label">Hours Worked</label>
-                            <input asp-for="HoursWorked" class="form-control" type="number" step="0.1" min="0.1" max="24" />
+                            <<input asp-for="HoursWorked" class="form-control" type="number"step="0.1" min="0.1" max="24"value="@Model.HoursWorked.ToString("0.0")" />
                             <span asp-validation-for="HoursWorked" class="text-danger"></span>
                         </div>
                         
